objects/Gong__Gong_Scorecard__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Answer_Formula__c</fullName>
        <formula>IF(ISPICKVAL( Gong__Scorecard_Question_Type__c , &apos;RANGE&apos;),IF(Gong__Scorecard_Question_Answer_Text__c==&apos;Not answered&apos;,&apos;Not Answered&apos;,IF(Gong__Scorecard_Question_Answer_Text__c==&apos;NA&apos;,&apos;NA&apos;,IMAGE( &apos;/resource/Gong__&apos; &amp; Gong__Scorecard_Question_Answer_Text__c , Gong__Scorecard_Question_Answer_Text__c )) ), Gong__Scorecard_Question_Answer_Text__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Answered_User_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scored by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gong_Scorecards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Interaction__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Scorecards</relationshipLabel>
        <relationshipName>Gong_Scorecards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Question_URL__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Id ,  Gong__Scorecard_Question__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Reviewed_User_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Got scored</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Gong_Scorecards1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Answer_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Score date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Call_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Call_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Call name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Full_Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Scorecard name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Answer_Is_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Answer N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Answer_Note__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Answer_Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Answer_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Answer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Full_Open_Answer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Has_Note__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Is_Overall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overall question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Range_Max__c</fullName>
        <label>Maximum range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question_Type__c</fullName>
        <label>Question type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOOLEAN</fullName>
                </value>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>RANGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Question__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Question</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Scorecard_Visibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Visibility</label>
        <type>TextArea</type>
    </fields>
    <label>Gong Scorecard</label>
    <nameField>
        <displayFormat>Gong Scorecard{0000000}</displayFormat>
        <label>Gong Scorecard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gong Scorecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>